# sqlite-tutorial

./: .env  .gitignore  Cargo.toml  readme.md
sqlx-tutorial/: Cargo.toml
sqlx-tutorial/src/: main.rs
src/: custom_query.rs  datas.rs  db.rs  insert_update_delete.rs  main.rs  query.rs  transaction.rs
src/entities/: bakery.rs  chef.rs
