[package]
name = "sqlite-tutorial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
custom-utils = "0.10.13"
anyhow = "1.0.70"
tokio = { version = "1.27.0", features = ["full"]}
sea-orm = {version = "0.11.2", features = ["sqlx-sqlite", "runtime-tokio-rustls"], default-features = false}