[package]
name = "sqlx-tutorial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1", features = ["full"]}
log = "0.4.20"
custom-utils = "0.10.15"
sqlx = {version = "0.7.1", features = ["sqlite", "runtime-tokio-native-tls"]}
anyhow = "1.0.75"
futures = "0.3.28"